cleaned up some css issues in the header, removed break points on datacreate component that were causing the form element to take up more vertical space then is seen visually, which was previously causing it to overlap with the save color pick element, and interfere with the hover css being read. added some comment notes to css for clarity

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ html {
   --linkPurple: rgb(98, 16, 250);
   --linkGrey: #333;
   --lightGrey: rgb(184, 184, 184);
+  --header-primary: #ffffff;
 }
 
 .root-container {
